--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -48,17 +48,17 @@
     <div class="inner">
         <div class="span4">
             <i class="icon-desktop icon-2x"></i>
-            <h3>Teknik Informatika</h3>
+            <h3>Rekayasa Perangkat Lunak</h3>
             <p>Rekayasa Perangkat Lunak, Teknik Komputer dan Jaringan, dan Multimedia.</p>
         </div>
         <div class="span4">
             <i class="icon-bolt icon-2x" style="margin-left: 10px;"></i>
-            <h3>Ketenaga Listrikan</h3>
+            <h3>Teknik Komputer dan Jaringan</h3>
             <p>Teknik Instalasi Tenaga Listrik, dan Teknik Otomasi Industri.</p>
         </div>
         <div class="span4">
             <i class="icon-facetime-video icon-2x"></i>
-            <h3>Audio Video</h3>
+            <h3>Multimedia</h3>
             <p>Teknik yang bekerja di bidang elektronika khususnya Audio dan Video.</p>
         </div>
     </div>
