--- a/application/views/scripts/search/index.phtml
+++ b/application/views/scripts/search/index.phtml
@@ -43,6 +43,14 @@
         </div>
     </div>
     <div class="span4 well sidebar">
+        <div class="widget top-blue">
+            <div class="widget-header">
+                <h4>Tag</h4>
+            </div>
+            <div class="widget-content">
+                <?php echo $this->widget()->getTagCloud(); ?>
+            </div>
+        </div>
         <?php echo $this->render('sidebar.phtml'); ?>
     </div>
 </div>
