--- a/application/modules/admin/views/scripts/gallery/index.phtml
+++ b/application/modules/admin/views/scripts/gallery/index.phtml
@@ -1,29 +1,29 @@
 <?php $this->headLink()->appendStylesheet($this->baseUrl('css/gallery/index.css')); ?>
 <div class="row-fluid">
-  <h3 style="display: inline">Galeri</h3>
-  <a class="btn btn-link btn-mini label label-success"
-     href="<?php echo $this->url(array('action' => 'create')); ?>">Tambahkan Album</a>
+    <h3 style="display: inline">Galeri</h3>
+    <a class="btn btn-link btn-mini label label-success"
+       href="<?php echo $this->url(array('action' => 'create')); ?>">Tambahkan Album</a>
 </div>
 <div class="row-fluid">
-  <ul class="thumbnails gallery-grid">
-    <?php foreach ($this->albums as $index => $album): ?>
-      <li>
-        <a href="<?php echo $this->url(array('action' => 'manage', 'id' => $album['id'])); ?>">
-          <figure>
-            <div>
-              <?php if (isset($album['photos'][0])): ?>
-                <img src="<?php echo $album['photos'][0]; ?>" alt="" />
-              <?php else: ?>
-                <img src="http://www.placehold.it/250x180/FFFFFF/AAAAAA&text=Tidak+ada+foto" alt="" />
-              <?php endif; ?>
-            </div>
-            <figcaption>
-              <h5><?php echo $album['title']; ?></h5>
-              <span>25 Januari 2013</span>
-            </figcaption>
-          </figure>
-        </a>
-      </li>
-    <?php endforeach; ?>
-  </ul>
+    <ul class="thumbnails gallery-grid">
+        <?php foreach ($this->albums as $index => $album): ?>
+            <li>
+                <a href="<?php echo $this->url(array('action' => 'manage', 'id'     => $album['id'])); ?>">
+                    <figure>
+                        <div>
+                            <?php if (isset($album['photos'][0])): ?>
+                                <img src="<?php echo $album['photos'][0]; ?>" alt="" />
+                            <?php else: ?>
+                                <img src="http://www.placehold.it/250x180/FFFFFF/AAAAAA&text=Tidak+ada+foto" alt="" />
+                            <?php endif; ?>
+                        </div>
+                        <figcaption>
+                            <h5><?php echo $album['title']; ?></h5>
+                            <span><?php echo Date('d F Y', strtotime($album['date'])); ?></span>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+        <?php endforeach; ?>
+    </ul>
 </div>
