--- a/application/modules/admin/views/scripts/index/index.phtml
+++ b/application/modules/admin/views/scripts/index/index.phtml
@@ -4,7 +4,7 @@
 </div>
 
 <div id="widgets" class="row-fluid">
-    <div class="span8 ui-sortable">
+    <div class="span8">
         <div class="w-box" id="w_sort02" style="">
             <div class="w-box-header">
                 <i class="icon-book"></i>&nbsp;Buku tamu
@@ -42,18 +42,42 @@
             </div>
         </div>
     </div>
-</div>
-<div class="row-fluid">
-    <div class="span8">
+    <div class="span4">
         <div class="w-box">
             <div class="w-box-header">
                 <i class="icon-comments"></i>&nbsp;Komentar Terbaru
             </div>
-            <div class="w-box-content cnt_a">
-                <ul class="unstyled">
-                    <li>
+            <div class="w-box-content cnt_a" id='comment-box-content'>
+                <ul class="unstyled" id="comment-list">
+                    <?php foreach ($this->latestComments as $index => $comment): ?>
+                        <?php
+                        $url = $this->url(array(
+                            'module'     => 'default',
+                            'controller' => 'article',
+                            'action'     => 'view',
+                            'id'         => $comment['article_id']
+                        ));
+                        ?>
+                        <li>
+                            <blockquote>
+                                <a href="<?php echo $url; ?>#comment"
+                                   class="comment-content"
+                                   target='_blank'>
+                                       <?php echo $comment['comment_content']; ?>
+                                </a>
+                                <small>
+                                    Oleh
+                                    <cite>
+                                        <a href="#"><?php echo $comment['username']; ?></a>
+                                    </cite>
+                                    pada
+                                    <b>"<?php echo $comment['article_title']; ?>"</b>
+                                    <?php echo $this->timeSince(time() - strtotime($comment['created_on'])); ?>
+                                </small>
+                            </blockquote>
 
-                    </li>
+                        </li>
+                    <?php endforeach; ?>
                 </ul>
             </div>
         </div>
