--- a/application/views/scripts/gallery/index.phtml
+++ b/application/views/scripts/gallery/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->minifyHeadlink()->appendStylesheet($this->baseUrl('css/application/gallery.css')); ?>
+<?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('css/application/gallery.css')); ?>
 <div class="main row-fluid">
     <div class="span12">
         <div class="content-inner">
