--- a/application/views/scripts/gallery/view.phtml
+++ b/application/views/scripts/gallery/view.phtml
@@ -1,6 +1,6 @@
 <?php
-$this->minifyHeadlink()->appendStylesheet($this->baseUrl('lib/colorbox/colorbox.css'));
-$this->minifyHeadscript()
+$this->MinifyHeadLink()->appendStylesheet($this->baseUrl('lib/colorbox/colorbox.css'));
+$this->MinifyHeadScript()
 ->appendFile($this->baseUrl('lib/colorbox/jquery.colorbox-min.js'))
 ->appendFile($this->baseUrl('js/application/gallery.js'));
 ?>
