--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,6 +1,6 @@
-<?php $this->minifyHeadlink()->appendStylesheet($this->baseUrl('lib/colorbox/colorbox.css')); ?>
-<?php $this->minifyHeadScript()->appendFile($this->baseUrl('lib/colorbox/jquery.colorbox-min.js')); ?>
-<?php $this->minifyHeadScript()->appendFile($this->baseUrl('js/application/index.js')); ?>
+<?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('lib/colorbox/colorbox.css')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/colorbox/jquery.colorbox-min.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/application/index.js')); ?>
 <div class="main row-fluid">
     <div class="span8">
         <div id="highlight" class="carousel slide">
