--- a/application/views/scripts/news/view.phtml
+++ b/application/views/scripts/news/view.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->minifyHeadLink()
+$this->MinifyHeadLink()
         ->appendStylesheet($this->baseUrl('css/application/news/view.css'));
 $auth = Zend_Auth::getInstance();
 ?>
@@ -21,7 +21,7 @@ $auth = Zend_Auth::getInstance();
 
                             <a href="#" title="Bagikan di Twitter">tw</a>
                         </li>
-                        
+
                     </ul>
                     <div class="clearfix"></div>
                 </li>
