--- a/application/views/scripts/search/index.phtml
+++ b/application/views/scripts/search/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->minifyHeadlink()->appendStylesheet($this->baseUrl('css/application/search.css')); ?>
+<?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('css/application/search.css')); ?>
 <div class="main row-fluid">
     <div class="span8">
         <div class="content-inner">
