--- a/application/views/scripts/article/view.phtml
+++ b/application/views/scripts/article/view.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->minifyHeadLink()
+$this->MinifyHeadLink()
 ->appendStylesheet($this->baseUrl('css/application/article/view.css'));
 $auth = Zend_Auth::getInstance();
 ?>
