--- a/application/views/scripts/prakerin/index.phtml
+++ b/application/views/scripts/prakerin/index.phtml
@@ -3,12 +3,12 @@ $key = "AIzaSyCTNj8ia2gmUviCAL5Beyrip_OQSI_hJdw";
 $sensor = "false";
 $libraries = "places";
 
-$this->minifyHeadLink()
+$this->MinifyHeadLink()
 ->appendStylesheet($this->baseUrl('lib/jquery-ui/css/smoothness/jquery-ui-1.8.20.custom.css'))
 ->appendStylesheet($this->baseUrl('lib/multiselect/jquery.multiselect.css'))
 ->appendStylesheet($this->baseUrl('css/application/prakerin.css'));
 
-$this->minifyHeadScript()
+$this->MinifyHeadScript()
 ->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}", 'text/javascript', array('minify_disabled'     => true, 'minify_split_before' => true))
 ->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
 ->appendFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
