--- a/public/css/application/gallery.css
+++ b/public/css/application/gallery.css
@@ -18,7 +18,7 @@
     -webkit-transition: border-top-color linear .2s;
 }
 .thumbnails.gallery-grid li {
-    width: 230px;
+    width: 280px;
     box-shadow: 0 1px 3px rgba(50, 50, 50, 0.2);
 }
 
@@ -39,4 +39,11 @@
 
 .thumbnails.gallery-grid figcaption h5 {
     font-size: 12px;
+}
+@media (max-width: 767px) {
+    .row-fluid .thumbnails.gallery-grid {
+        width: 280px;
+        margin: 0 auto;
+    }
+
 }
