Minify di admin

--- a/application/modules/admin/views/scripts/event/form.phtml
+++ b/application/modules/admin/views/scripts/event/form.phtml
@@ -1,10 +1,10 @@
 <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/datepicker/datepicker.css')); ?>
-<?php $this->headScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
-<?php $this->headScript()->appendFile($this->baseUrl('lib/datepicker/bootstrap-datepicker.js')); ?>
-<?php $this->headScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/datepicker/bootstrap-datepicker.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
 
 <?php
-$this->headScript()->appendScript(
+$this->MinifyHeadScript()->appendScript(
         <<<SCRIPT
  $(function(){
    SITi_tinyMCE.init();
