--- a/application/modules/admin/views/scripts/news/form.phtml
+++ b/application/modules/admin/views/scripts/news/form.phtml
@@ -1,14 +1,17 @@
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
+<?php $this->MinifyHeadScript()->appendScript("$(function(){SITi_tinyMCE.init();})") ?>
 <form action="" method="post">
-  <?php echo $this->form->title; ?>
-  <div class="row-fluid">
-    <div class="span8">
-      <?php echo $this->form->content; ?>
+    <?php echo $this->form->title; ?>
+    <div class="row-fluid">
+        <div class="span8">
+            <?php echo $this->form->content; ?>
+        </div>
+        <div class="span4">
+            <div class="well">
+                <?php echo $this->form->submit; ?>
+                <?php echo $this->form->draft; ?>
+            </div>
+        </div>
     </div>
-    <div class="span4">
-      <div class="well">
-        <?php echo $this->form->submit; ?>
-        <?php echo $this->form->draft; ?>
-      </div>
-    </div>
-  </div>
 </form>
