--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -5,27 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <?php echo $this->headTitle('SMKN 4 Bandung - Admin'); ?>
 
-        <!-- Bootstrap framework -->
-        <?php $this->headLink()->prependStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css')); ?>
-        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css')); ?>
-
-        <!-- Tooltips -->
-        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/jquery/qtip2/jquery.qtip.min.css')); ?>
-
-        <?php // $this->headLink()->appendStylesheet($this->baseUrl('lib/plupload/js/jquery.plupload.queue/css/jquery.plupload.queue.css')  ); ?>
-        <?php $this->headLink()->prependStylesheet($this->baseUrl('lib/Tag-Handler/css/jquery.taghandler.css')); ?>
-        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/jquery-ui/css/Aristo/Aristo.css')); ?>
-
-        <!-- Blue Theme -->
-        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/gebo/css/blue.css')); ?>
-
-        <!-- Main Styles -->
-        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/gebo/css/style.css')); ?>
-        <?php $this->headLink()->appendStylesheet('http://fonts.googleapis.com/css?family=PT+Sans'); ?>
-
-        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/font-awesome/css/font-awesome.css')); ?>
-
         <?php
+        $this->MinifyHeadLink()
+        ->prependStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css'))
+        ->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css'))
+        ->appendStylesheet($this->baseUrl('lib/jquery/qtip2/jquery.qtip.min.css'))
+        ->prependStylesheet($this->baseUrl('lib/Tag-Handler/css/jquery.taghandler.css'))
+        ->appendStylesheet($this->baseUrl('lib/jquery-ui/css/Aristo/Aristo.css'))
+        ->appendStylesheet($this->baseUrl('lib/gebo/css/blue.css'))
+        ->appendStylesheet($this->baseUrl('lib/gebo/css/style.css'))
+        ->appendStylesheet('http://fonts.googleapis.com/css?family=PT+Sans')
+        ->appendStylesheet($this->baseUrl('lib/font-awesome/css/font-awesome.css'));
+
         $this
         ->MinifyHeadScript()
         ->prependFile($this->baseUrl('lib/jquery/jquery-1.8.3.js'))
@@ -41,7 +32,7 @@
         ->appendFile($this->baseUrl('lib/gebo/js/gebo_common.js'));
         ?>
 
-        <?php echo $this->headLink(); ?>
+        <?php echo $this->MinifyHeadLink(); ?>
         <?php echo $this->MinifyHeadScript(); ?>
 
         <?php
