--- a/application/modules/admin/views/scripts/article/form.phtml
+++ b/application/modules/admin/views/scripts/article/form.phtml
@@ -1,42 +1,44 @@
-<?php $this->headScript()->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js')); ?>
-<?php $this->headScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
-<?php $this->headScript()->appendFile($this->baseUrl('lib/Tag-Handler/js/jquery.taghandler.js')); ?>
-<?php $this->headScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
-<?php $this->headScript()->appendScript("$(function(){
+<?php
+$this->MinifyHeadScript()
+->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
+->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js'), 'text/javascript', array('minify_disabled' => true))
+->appendFile($this->baseUrl('lib/Tag-Handler/js/jquery.taghandler.js'))
+->appendFile($this->baseUrl('js/SITi_admin.js'))
+->appendScript("$(function(){
   SITi_tinyMCE.init();
   SITi_tag_handler.init();
-});")
+});");
 ?>
 <form action="" method="post" enctype="multipart/form-data">
-  <?php echo $this->form->title; ?>
-  <div class="row-fluid">
-    <div class="span8">
-      <?php echo $this->form->content; ?>
-      <div class="control-group">
-        <div class="controls">
-          <?php echo $this->form->tags; ?>
-          <div class="input-prepend">
-            <span class="add-on"><i class="icon-tags"></i></span>
-            <ul class="tags" style="background-color: #fff"></ul>
-            
-          </div>
-          <span class="text text-info">Ketikan tag. Tekan Enter untuk menambahkan.</span>
+    <?php echo $this->form->title; ?>
+    <div class="row-fluid">
+        <div class="span8">
+            <?php echo $this->form->content; ?>
+            <div class="control-group">
+                <div class="controls">
+                    <?php echo $this->form->tags; ?>
+                    <div class="input-prepend">
+                        <span class="add-on"><i class="icon-tags"></i></span>
+                        <ul class="tags" style="background-color: #fff"></ul>
+
+                    </div>
+                    <span class="text text-info">Ketikan tag. Tekan Enter untuk menambahkan.</span>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="span4">
+        <div class="span4">
 
 
+        </div>
     </div>
-  </div>
-  <div class="row-fluid">
-    <div class="control-group">
-      <div class="controls">
-        <?php echo $this->form->submit; ?>
-        <?php echo $this->form->draft; ?>
-      </div>
+    <div class="row-fluid">
+        <div class="control-group">
+            <div class="controls">
+                <?php echo $this->form->submit; ?>
+                <?php echo $this->form->draft; ?>
+            </div>
+        </div>
     </div>
-  </div>
 
 
 </form>
