--- a/application/modules/admin/views/scripts/highlight/index.phtml
+++ b/application/modules/admin/views/scripts/highlight/index.phtml
@@ -1,5 +1,5 @@
-<?php $this->headScript()->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js')); ?>
-<?php $this->headScript()->appendFile($this->baseUrl('js/highlight/index.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/highlight/index.js')); ?>
 <?php $this->headLink()->appendStylesheet($this->baseUrl('css/highlight/index.css')); ?>
 <?php echo $this->FlashMessenger($this->messages); ?>
 <div class="row-fluid">
