--- a/application/modules/admin/views/scripts/user/login.phtml
+++ b/application/modules/admin/views/scripts/user/login.phtml
@@ -9,7 +9,7 @@
         <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/gebo/css/style.css')); ?>
 
         <?php echo $this->headLink(); ?>
-        <?php echo $this->headScript(); ?>
+        <?php echo $this->MinifyHeadScript(); ?>
 
         <link rel="shortcut icon" href="favico.ico" />
         <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
