--- a/application/views/scripts/sidebar.phtml
+++ b/application/views/scripts/sidebar.phtml
@@ -111,4 +111,35 @@
 
         </div>
     </div>
+
+    <div class="widget" style="padding: 0; border-radius: 5px;height: 600px;">
+        <a class="twitter-timeline" width="100%" height="100%" href="https://twitter.com/smk4bdg" data-widget-id="307192253972090881">Tweets by @smk4bdg</a>
+    </div>
+
+    <script>!function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (!d.getElementById(id)) {
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//platform.twitter.com/widgets.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }
+        }(document, "script", "twitter-wjs");
+
+        $(function() {
+            var style = document.createElement('link');
+            style.href = '/css/twidget.css';
+            style.rel = 'stylesheet';
+            style.type = 'text/css';
+        })
+
+    </script>
+
+    <style type="text/css">
+        #twitter-widget-0 {
+            width: 100%;
+            height: 600px;
+        }
+    </style>
+
 <?php endif; ?>
