--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <?php echo $this->headTitle('SMKN 4 Bandung - Admin'); ?>
+    <?php echo $this->headTitle('TI SMKN 4 Bandung - Admin'); ?>
 
     <!-- Bootstrap framework -->
     <?php $this->headLink()->prependStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css')); ?>
