Fix bug karena minifyheadlink

--- a/application/modules/admin/views/scripts/event/index.phtml
+++ b/application/modules/admin/views/scripts/event/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->headLink()->appendStylesheet($this->baseUrl('lib/datepicker/datepicker.css')); ?>
+<?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('lib/datepicker/datepicker.css')); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/datepicker/bootstrap-datepicker.js')); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
 
