--- a/application/modules/admin/views/scripts/gallery/index.phtml
+++ b/application/modules/admin/views/scripts/gallery/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->headLink()->appendStylesheet($this->baseUrl('css/gallery/index.css')); ?>
+<?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('css/gallery/index.css')); ?>
 <div class="row-fluid">
     <h3 style="display: inline">Galeri</h3>
     <a class="btn btn-link btn-mini label label-success"
