--- a/application/modules/admin/views/scripts/gallery/manage.phtml
+++ b/application/modules/admin/views/scripts/gallery/manage.phtml
@@ -2,8 +2,8 @@
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/plupload/js/jquery.plupload.queue/jquery.plupload.queue.full.js')) ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/plupload/js/i18n/id.js')); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/gallery/manage.js')); ?>
-<?php $this->headLink()->appendStylesheet($this->baseUrl('lib/plupload/js/jquery.plupload.queue/css/plupload-gebo.css')); ?>
-<?php $this->headLink()->appendStylesheet($this->baseUrl('css/gallery/manage.css')); ?>
+<?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('lib/plupload/js/jquery.plupload.queue/css/plupload-gebo.css')); ?>
+<?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('css/gallery/manage.css')); ?>
 <?php echo $this->flashMessenger($this->messages); ?>
 
 <form action="" method="post">
