--- a/application/modules/admin/views/scripts/prakerin/form.phtml
+++ b/application/modules/admin/views/scripts/prakerin/form.phtml
@@ -9,7 +9,7 @@ $this->MinifyHeadScript()
         ->appendFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
         ->appendFile($this->baseUrl('js/prakerin.js'));
 
-$this->headLink()
+$this->MinifyHeadLink()
 //        ->prependStylesheet($this->baseUrl('lib/jquery-ui/css/smoothness/jquery-ui-1.8.20.custom.css'))
         ->appendStylesheet($this->baseUrl('lib/multiselect/jquery.multiselect.css'));
 ?>
