--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -220,7 +220,7 @@
                                                     <li><a href="<?php echo $this->url(array('controller' => 'jobs', 'action'     => 'index')); ?>">Lowongan Kerja</a></li>
                                                     <li><a href="<?php echo $this->url(array('controller' => 'prakerin', 'action'     => 'index')); ?>">Info Prakerin</a></li>
                                                     <li><a href="<?php echo $this->url(array('controller' => 'account', 'action'     => 'index')); ?>">Akun</a></li>
-                                                    <li><a href="<?php echo $this->url(array('controller' => 'log', 'action'     => 'index')); ?>">Log</a></li>
+                                                    <!--<li><a href="<?php echo $this->url(array('controller' => 'log', 'action'     => 'index')); ?>">Log</a></li>-->
                                                 </ul>
                                             </div>
                                         </div>
