--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -100,18 +100,6 @@
                         </a>
                         <div class="nav-collapse in collapse">
                             <?php echo $menu; ?>
-                            <!--                            <ul class="nav">
-                                                            <li class="dropdown">
-                                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                                                    <i class="icon-folder-close"></i> Konten <i class="caret"></i>
-                                                                </a>
-                                                                <ul class="dropdown-menu">
-                                                                    <li><a href="#"><i class="icon-info-sign"></i>&nbsp;Pengumuman</a></li>
-                                                                    <li><a href="#"><i class="icon-calendar"></i>&nbsp;Agenda</a></li>
-                                                                    <li><a href="#"><i class="icon-briefcase"></i>&nbsp;Lowongan Kerja</a></li>
-                                                                </ul>
-                                                            </li>
-                                                        </ul>-->
                             <ul class="nav pull-right">
                                 <li class="dropdown">
                                     <?php
@@ -178,16 +166,16 @@
                 </div>
             </section>
             <footer>
-                <!--<div class = "footer row-fluid">
-                <div class = "content-inner">
-                <div class = "span3">
-                SMKN 4 Bandung
-                </div>
-                <div class = "span3">Kontak Kami</div>
-                <div class = "span3">Foto Terbaru</div>
-                <div class = "span3">Twitter</div>
-                </div>
-                </div>-->
+                <!--                <div class = "footer row-fluid">
+                                <div class = "content-inner">
+                                <div class = "span3">
+                                SMKN 4 Bandung
+                                </div>
+                                <div class = "span3">Kontak Kami</div>
+                                <div class = "span3">Foto Terbaru</div>
+                                <div class = "span3">Twitter</div>
+                                </div>
+                                </div>-->
                 <div class = "copyright row-fluid">
                     <div class = "inner">
                         <div class = "copyright pull-left">
@@ -210,19 +198,19 @@
             <i class="icon-circle-arrow-up icon-3x"></i>
         </a>
         <script type="text/javascript">
-            //      var _gaq = _gaq || [];
-            //      _gaq.push(['_setAccount', 'UA-38322604-1']);
-            //      _gaq.push(['_trackPageview']);
-            //      _gaq.push(['_setDomainName', 'none']);
-            //
-            //      (function() {
-            //        var ga = document.createElement('script');
-            //        ga.type = 'text/javascript';
-            //        ga.async = true;
-            //        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            //        var s = document.getElementsByTagName('script')[0];
-            //        s.parentNode.insertBefore(ga, s);
-            //      })();
+                  var _gaq = _gaq || [];
+                  _gaq.push(['_setAccount', 'UA-38322604-1']);
+                  _gaq.push(['_trackPageview']);
+                  _gaq.push(['_setDomainName', 'none']);
+
+                  (function() {
+                    var ga = document.createElement('script');
+                    ga.type = 'text/javascript';
+                    ga.async = true;
+                    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(ga, s);
+                  })();
         </script>
     </body>
 </html>
