--- a/application/modules/admin/views/scripts/event/form.phtml
+++ b/application/modules/admin/views/scripts/event/form.phtml
@@ -1,11 +1,11 @@
 <?php $this->MinifyHeadLink()->appendStylesheet($this->baseUrl('lib/datepicker/datepicker.css')); ?>
-<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js'), 'text/javascript', array('minify_disabled' => true)); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/datepicker/bootstrap-datepicker.js')); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
 
 <?php
 $this->MinifyHeadScript()->appendScript(
-        <<<SCRIPT
+<<<SCRIPT
  $(function(){
    SITi_tinyMCE.init();
    SITi_datepicker.init();
@@ -15,23 +15,23 @@ SCRIPT
 ?>
 
 <form action="" method="post">
-  <?php echo $this->form->title; ?>
-  <?php echo $this->form->location; ?>
-  <div class="row-fluid">
-    <div class="span8">
-      <?php echo $this->form->info; ?>
+    <?php echo $this->form->title; ?>
+    <?php echo $this->form->location; ?>
+    <div class="row-fluid">
+        <div class="span8">
+            <?php echo $this->form->info; ?>
+        </div>
+        <div class="span4">
+            <div class="well">
+                <p class="f_legend">Waktu Kegiatan</p>
+                <?php echo $this->form->from_date; ?>
+                <?php echo $this->form->until_date; ?>
+            </div>
+            <div class="well">
+                <?php echo $this->form->submit; ?>
+                <?php echo $this->form->draft; ?>
+            </div>
+        </div>
     </div>
-    <div class="span4">
-      <div class="well">
-        <p class="f_legend">Waktu Kegiatan</p>
-        <?php echo $this->form->from_date; ?>
-        <?php echo $this->form->until_date; ?>
-      </div>
-      <div class="well">
-        <?php echo $this->form->submit; ?>
-        <?php echo $this->form->draft; ?>
-      </div>
-    </div>
-  </div>
 
 </form>
