--- a/application/modules/admin/views/scripts/jobs/form.phtml
+++ b/application/modules/admin/views/scripts/jobs/form.phtml
@@ -1,5 +1,5 @@
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js')); ?>
-<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js'), 'text/javascript', array('minify_disabled' => true)); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/Tag-Handler/js/jquery.taghandler.js')); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
 <?php
@@ -8,27 +8,27 @@ $this->MinifyHeadScript()->appendScript('
   SITi_tag_handler.init();');
 ?>
 <form action="" method="post" enctype="multipart/form-data">
-  <div class="row-fluid">
-    <div class="span8">
-      <?php echo $this->form->title; ?>
-      <?php echo $this->form->info; ?>
-      <?php echo $this->form->tags; ?>
-      <div class="input-prepend">
-        <span class="add-on"><i class="icon-tags"></i></span>
-        <ul class="tags"></ul>
-      </div>
-      <span class="text text-info">Ketikan nama tag. Tekan Enter untuk menambahkan.</span>
+    <div class="row-fluid">
+        <div class="span8">
+            <?php echo $this->form->title; ?>
+            <?php echo $this->form->info; ?>
+            <?php echo $this->form->tags; ?>
+            <div class="input-prepend">
+                <span class="add-on"><i class="icon-tags"></i></span>
+                <ul class="tags"></ul>
+            </div>
+            <span class="text text-info">Ketikan nama tag. Tekan Enter untuk menambahkan.</span>
+        </div>
+        <div class="span4">
+            <div class="well">
+                <p class="f_legend">Informasi Perusahaan</p>
+                <?php echo $this->form->logo; ?>
+                <?php echo $this->form->company; ?>
+                <?php echo $this->form->website; ?>
+            </div>
+        </div>
     </div>
-    <div class="span4">
-      <div class="well">
-        <p class="f_legend">Informasi Perusahaan</p>
-        <?php echo $this->form->logo; ?>
-        <?php echo $this->form->company; ?>
-        <?php echo $this->form->website; ?>
-      </div>
+    <div class="row-fluid">
+        <?php echo $this->form->submit; ?>
     </div>
-  </div>
-  <div class="row-fluid">
-    <?php echo $this->form->submit; ?>
-  </div>
 </form>
