--- a/application/modules/admin/views/scripts/news/form.phtml
+++ b/application/modules/admin/views/scripts/news/form.phtml
@@ -1,4 +1,4 @@
-<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js'), 'text/javascript', array('minify_disabled' => true)); ?>
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
 <?php $this->MinifyHeadScript()->appendScript("$(function(){SITi_tinyMCE.init();})") ?>
 <form action="" method="post">
