--- a/application/views/scripts/article/view.phtml
+++ b/application/views/scripts/article/view.phtml
@@ -43,7 +43,18 @@ $auth = Zend_Auth::getInstance();
             </ul>
 
             <?php if ($this->auth->hasIdentity() && $user = $this->auth->getIdentity()): ?>
-                <form action="<?php echo $this->url(); ?>#comment" method="post" id="comment-form">
+                <?php
+                $commentUrl = $this->url(array(
+                    'action'     => 'comment',
+                    'controller' => 'article',
+                    'module'     => 'default',
+                    'id'         => $this->article['id'],
+                    'return'     => str_replace('/', '|', $this->url()) . '#comment'
+                ));
+                ?>
+                <form onsubmit="if (this.content.value == '')
+                                return false"
+                      action="<?php echo $commentUrl; ?>" method="post" id="comment-form">
                     <div class="input-prepend">
                         <div class="add-on">
                             <?php
