--- a/application/views/scripts/guestbook/index.phtml
+++ b/application/views/scripts/guestbook/index.phtml
@@ -7,11 +7,17 @@
                 </div>
 
             </div>
-            
+
             <br />
+            <p>
+                Terima kasih telah berkunjung ke website <strong>Teknik Informatika SMK
+                    Negeri 4 Bandung</strong>. Apabila anda memiliki pesan, kritik dan saran
+                yang ingin disampaikan, silahkan mengisi buku tamu kami.
+            </p>
             <br />
-            
-            <?php echo $this->form;  ?>
+
+
+            <?php echo $this->form; ?>
         </div>
     </div>
     <div class="sidebar span4 well">
