--- a/application/modules/admin/views/scripts/mading/index.phtml
+++ b/application/modules/admin/views/scripts/mading/index.phtml
@@ -1,4 +1,8 @@
 <?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js')); ?>
+<?php $this->MinifyHeadScript()->appendFile($this->baseUrl('lib/jCarousel/lib/jquery.jcarousel.min.js')); ?>
+
+<link rel="stylesheet" href="/css/mading/index.css" type="text/css" />
+
 <div class="row-fluid">
     <h3 style="display: inline">Majalah Dinding</h3>
     <a href="<?php echo $this->url(array('action' => 'create')); ?>"
@@ -8,66 +12,54 @@
 </div>
 <div class="row-fluid">
     <div class="span12">
-        <ul class="thumbnails" id='mading'>
+        <ul class="jcarousel-skin-tango thumbnails" id='mading'>
             <?php foreach ($this->mading as $index => $mading): ?>
-                <?php if ($mading['sort'] !== null): ?>
-                    <li class='well well-small'>
-                        <div>
-                            <div class="handle">
-                                <strong><?php echo $mading['title']; ?></strong>
-                            </div>
-                            <figure>
-                                <?php echo $this->timthumb($this->baseUrl('upload/mading/' . $mading['image']), 200, 300, 100); ?>
-                                <figcaption>
-                                    Dibuat oleh <a href="#"><?php echo $mading['created_by']; ?></a>
-                                    <br />
-                                    <?php echo Date('d F Y', strtotime($mading['created_on'])); ?>
-                                </figcaption>
-                            </figure>
+                <li id="<?php echo 'mading_' . $mading['id']; ?>">
+                    <div class="well well-small">
+                        <div class="handle">
+                            <strong><?php echo $mading['title']; ?></strong>
                         </div>
-                    </li>
-                <?php endif; ?>
+                        <figure>
+                            <?php
+                            echo $this->timthumb($this->baseUrl('upload/mading/' . $mading['image']), 400, 600, 100, array());
+                            ?>
+                            <figcaption>
+                                Dibuat oleh <a href="#"><?php echo $mading['created_by']; ?></a>
+                                <br />
+                                <?php echo Date('d F Y', strtotime($mading['created_on'])); ?>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </li>
             <?php endforeach; ?>
         </ul>
     </div>
 </div>
 
 <script type="text/javascript">
-    $("#mading").sortable({
-        handle: '.handle',
-        receive: function(event, ui) {
-            alert('asdf');
-            if ($(this).children().length >= 4) {
-
+    $(function() {
+        $("#mading").sortable({
+            handle: '.handle',
+            placeholder: 'sortable-placeholder',
+            forcePlaceholderSize: true,
+            animation: {
+                duration: 800,
+                easing: 'linear'
+            },
+            update: function(event, ui) {
+                var order = $("#mading").sortable('serialize');
+                $.ajax({
+                    url: '/admin/mading/order',
+                    type: 'post',
+                    data: order,
+                    cache: false,
+                });
             }
-        }
-    });
+        });
+
+        $('#mading').jcarousel({
+            scroll: 1,
+            visible: 4
+        });
+    })
 </script>
-
-<style type="text/css">
-    #mading .handle {
-        background-image: url('/img/drag-handle-h.png');
-        min-height: 20px;
-        margin-bottom: 5px;
-        cursor: move;
-        text-align: center;
-    }
-
-    #mading .handle strong {
-        background-color: #f5f5f5;
-        padding: 1px;
-        border-radius: 4px;
-    }
-
-    #mading .well {
-        padding: 4px;
-    }
-
-    #mading figure {
-        margin: 0;
-    }
-
-    #mading figcaption {
-        text-align: center;
-    }
-</style>
